[build-system]
requires = ["hatchling", "requests", "json", "warnings", "csv", "io", "pandas"]
build-backend = "hatchling.build"

[project]
name = "hubamp_template_helper"
version = "0.0.1"
authors = [
  { name="Thomas C. Smits", email="tsmits@hms.harvard.edu" },
]
description = "Helper functions for templates within HuBMAP Data Portal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thomcsmits/hubamp_template_helper"
"Bug Tracker" = "https://github.com/thomcsmits/hubamp_template_helper/issues"